# rn_davinci_automatic_calibration

./: 20171211_power_ctcle_test_notes  CMakeLists.txt  package.xml  readme.md
csv/: 02_j2_arc.csv  03_green_j1_arc_01.csv  03_j2_still_samples_j4_90_deg.csv  04_green_j2_arc_01.csv  05_green_small_sphere_5cm.csv  06_green_small_sphere_11cm.csv  07_green_small_sphere_17cm.csv  08_green_small_sphere_23cm.csv  09_green_j5_arc_01_at_j3_14cm.csv  10_green_j6_arc_01_at_j3_14cm.csv  green_frozen.csv
launch/: green_arm.launch  yellow_arm.launch
scripts/: 03_green_j1_arc_01.bag  04_green_j2_arc_01.bag.active  20180730_green_arm_intrinsic_j4_minus_30_deg_Mark_X.sh  20180730_green_arm_intrinsic_quality_test_stray_marker.sh  20180803_green_arm_accuracy_test_stray_marker.sh  20180806_yellow_arm_intrinsic_j4_0_deg.sh  20180806_yellow_arm_intrinsic_quality_test.sh  20180809_yellow_arm_j2_encoder_test.sh  20180813_green_arm_j1_encoder_test.sh  20180813_green_arm_j2_encoder_test.sh  bagging_auxiliary.sh  dual_frozen_evaluation.sh  dual_frozen_evaluation_tom_polaris.sh  dual_frozen_evaluation_tom_polaris_yellow_only.sh  dual_frozen_green.sh  dual_frozen_green_tom_polaris.sh  dual_frozen_yellow.sh  dual_frozen_yellow_tom_polaris.sh  green_arm.sh  green_arm_frozen.sh  green_arm_intrinsic_j4_45_deg_Mark_X.sh  green_arm_intrinsic_j4_90_deg_Mark_X.sh  green_arm_new.sh  green_arm_power_cycle_test.sh  green_arm_prismatic_offsets.sh  green_arm_prismatic_offsets_Mark_X.sh  green_arm_random_wrist_pts.sh  green_arm_test_short.sh  psm1_power_cycle_test.sh  script_notes.txt  yellow_arm.sh  (+3 more)
(+945 files in other folders)
