<?xml version="1.0"?>
<package>
  <name>automatic_calibration</name>
  <version>0.0.1</version>
  <description>Something something do automatic calibration.</description>

  <maintainer email="tes77@case.edu">Tom Shkurti</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Not Done</license>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="tes77@case.edu">Tom Shkurti</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>cwru_playfile_reader</run_depend>
  <run_depend>cwru_scripts</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->


    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
